--- a/index.css
+++ b/index.css
@@ -44,21 +44,13 @@ body {
     margin: 0;
 }
 
-.map {
+#map {
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: var(--sidebar-width);
     background-color: #051110;
-
-    /* HACK: Placeholder map while live map is disabled */
-    background-image: url(http://127.0.0.1:5000/static/minimap/indar.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 60%;
-    -webkit-user-select: none;
-    user-select: none;
 }
 
 .sidebar {
@@ -73,7 +65,7 @@ body {
     font-size: 10pt;
 }
 
-.sidebar-grabber {
+#sidebar-grabber {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -85,7 +77,7 @@ body {
     transition: background-color 0s linear 0.1s;
 }
 
-.sidebar-grabber:hover {
+#sidebar-grabber:hover {
     background-color: var(--sidebar-grabber-hover);
 }
 
@@ -184,7 +176,7 @@ body {
     column-gap: var(--sidebar-column-gap);
 }
 
-.layer-toggle {
+#layer-toggle-container>div {
     position: relative;
     border-radius: var(--widget-radius);
     padding: 4px 8px 4px calc(8px + var(--sidebar-icon-size));
@@ -195,26 +187,26 @@ body {
     user-select: none;
 }
 
-.layer-toggle:not([data-active]) {
+#layer-toggle-container>div:not([data-active]) {
     text-decoration: line-through;
 }
 
-.layer-toggle:not([data-disabled]):hover {
+#layer-toggle-container>div:not([data-disabled]):hover {
     background-color: var(--widget-color-bg-hover);
     color: var(--text-hover);
     opacity: 1;
 }
 
-.layer-toggle:not([data-disabled]):active {
+#layer-toggle-container>div:not([data-disabled]):active {
     opacity: var(--widget-active-opacity);
 }
 
-.layer-toggle[data-disabled] {
+#layer-toggle-container>div[data-disabled] {
     opacity: 0.6;
     cursor: not-allowed;
 }
 
-.layer-toggle[data-active]::before {
+#layer-toggle-container>div[data-active]::before {
     position: absolute;
     content: "✓";
     left: 8px;
