--- a/ps2-map.css
+++ b/ps2-map.css
@@ -13,12 +13,11 @@ html {
 }
 
 .ps2map__layer {
-    pointer-events: none;
     position: absolute;
-    -ms-user-select: none;
+    pointer-events: none;
     -webkit-user-select: none;
-    transition: transform 200ms ease-out;
     user-select: none;
+    transition: transform 200ms ease-out;
 }
 
 #hexes {
@@ -64,45 +63,45 @@ html {
 }
 
 .ps2map__base-names__icon__amp-station::before {
-    content: url(img/icons/amp-station.svg);
+    content: url(./img/icons/amp-station.svg);
 }
 
 .ps2map__base-names__icon__bio-lab::before {
-    content: url(img/icons/bio-lab.svg);
+    content: url(./img/icons/bio-lab.svg);
 }
 
 .ps2map__base-names__icon__construction-outpost::before {
-    content: url(img/icons/construction-outpost.svg);
+    content: url(./img/icons/construction-outpost.svg);
 }
 
 .ps2map__base-names__icon__containment-site::before {
-    content: url(img/icons/containment-site.svg);
+    content: url(./img/icons/containment-site.svg);
 }
 
 .ps2map__base-names__icon__interlink::before {
-    content: url(img/icons/interlink.svg);
+    content: url(./img/icons/interlink.svg);
 }
 
 .ps2map__base-names__icon__large-outpost::before {
     --ps2map__base-icon-size: 1.2em;
-    content: url(img/icons/large-outpost.svg);
+    content: url(./img/icons/large-outpost.svg);
 }
 
 .ps2map__base-names__icon__small-outpost::before {
     --ps2map__base-icon-size: 1.08em;
-    content: url(img/icons/small-outpost.svg);
+    content: url(./img/icons/small-outpost.svg);
 }
 
 .ps2map__base-names__icon__tech-plant::before {
-    content: url(img/icons/tech-plant.svg);
+    content: url(./img/icons/tech-plant.svg);
 }
 
 .ps2map__base-names__icon__trident::before {
-    content: url(img/icons/trident.svg);
+    content: url(./img/icons/trident.svg);
 }
 
 .ps2map__base-names__icon__warpgate::before {
-    content: url(img/icons/warpgate.svg);
+    content: url(./img/icons/warpgate.svg);
 }
 
 .ps2map__terrain {
