--- a/index.css
+++ b/index.css
@@ -53,6 +53,17 @@ body {
     background-color: #051110;
 }
 
+#tool-context {
+    position: absolute;
+    display: none;
+    border-radius: 8px;
+    background-color: var(--bg-sidebar);
+    padding: 8px 12px;
+    z-index: 1;
+    -webkit-user-select: none;
+    user-select: none;
+}
+
 #sidebar {
     position: fixed;
     height: 100%;
